[package]
name = "aoctool"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
dirs = "4.0.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
